--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "learning-game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kraisu0.github.io/learning-game",
+  "homepage": "https://Kraisu0.github.io/learning-game",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
